# libmaolan

./: .ccls  .clang  .clang-format  .gitignore  BSDmakefile  CMakeLists.txt  GNUmakefile  LICENSE  Makefile  README.md  applylv2.cpp  audiochunk.cxx  audioconnection.cxx  audioengine.cxx  audioengine.h  audiofile.cxx  audiofileinput.cxx  audioio.cxx  audiooss.cxx  audiooss.h  audioossout.cxx  configure.ac  configure.in  fileinput.cxx  fullduplex.c  fullduplex.cxx  libmaolan.pc  libmaolan.pc.in  listlv2.cpp  lv2info.cpp  makeinclude.BSD  makeinclude.Linux  makeinclude.common  makeinclude.in  maolan.cxx  maolancli.cpp  plugininfo.cpp  sample.h  th.cxx  types.cxx
alsa/: audio
data/: example.mid  example.xml  note.mid  notes.mid  session.json  test.xml  xmlcreate.cpp
data/alsa/: session.json
data/midi/: note.mid
data/oss/: midi  session.json
data/sndio/: session.json
include/: audiochunk.h  audioconnection.h  audioengine.h  audiofile.h  audiofileinput.h  audioio.h  audiooss.h  audioossout.h  fileinput.h  types.h
maolan/: audiochunk  audiochunk.h  audioconnection  audioconnection.h  audiofileinput  audiofileinput.h  audioinput  audioinput.h  audioio  audioio.h  audiooss  audiooss.h  audioossin  audioossin.h  audioossout  audioossout.h  audiostate  audiostate.h  audiotrack  audiotrack.h  backends.hpp  bpm.h  config  config.h  config.hpp  constants  constants.h  constants.hpp  dynamichw.hpp  engine.h  engine.hpp  frame.h  frame.hpp  hw.hpp  io.h  io.hpp  midiclip.h  midievent.h  midifile.h  midiio.h  (+10 more)
maolan/alsa/audio/: base.hpp  in.hpp  out.hpp
maolan/audio/: backend.hpp  buffer.h  buffer.hpp  chunk.h  clip.h  clip.hpp  connectable.h  connectable.hpp  connection.h  connection.hpp  file.h  file.hpp  fileinput.h  hw.hpp  input.h  input.hpp  io.h  io.hpp  oss.h  ossconfig.h  ossin.h  ossout.h  output.hpp  plugin.h  plugininfo.h  pluginport.h  state.h  state.hpp  track.h  track.hpp
maolan/audio/alsa/: base.h  base.hpp  config.h  config.hpp  in.h  in.hpp  out.h  out.hpp
maolan/audio/oss/: base.h  base.hpp  config.h  config.hpp  in.h  in.hpp  out.h  out.hpp
maolan/midi/: backend.hpp  buffer.h  buffer.hpp  chunk.h  clip.h  clip.hpp  connectable.h  connectable.hpp  connection.h  connection.hpp  event.h  event.hpp  file.h  file.hpp  hw.hpp  input.h  input.hpp  io.h  io.hpp  track.h  track.hpp
maolan/midi/oss/: base.h  base.hpp  config.h  config.hpp  in.h  in.hpp  out.h  out.hpp
maolan/oss/: io.hpp
maolan/oss/audio/: base.hpp  in.hpp  out.hpp
maolan/oss/midi/: base.hpp  config.hpp  in.hpp  out.hpp
maolan/plugin/: instrument.h  instrument.hpp  io.h  io.hpp
maolan/plugin/lv2/: info.h  info.hpp  plugin.h  plugin.hpp  port.h  port.hpp  sequence.hpp
maolan/scheduler/: base.hpp  kqueue.hpp  poll.hpp  sleep.hpp
maolan/sndio/audio/: base.hpp  in.hpp  out.hpp
src/: Makefile  audiochunk.cpp  audiochunk.cxx  audioconnection.cpp  audioconnection.cxx  audiofileinput.cpp  audiofileinput.cxx  audioinput.cpp  audioinput.cxx  audioio.cpp  audioio.cxx  audiooss.cpp  audiooss.cxx  audioossin.cpp  audioossin.cxx  audioossout.cpp  audioossout.cxx  audiotrack.cpp  audiotrack.cxx  backends.cpp  bpm.cpp  config.cpp  config.cxx  dynamichw.cpp  engine.cpp  frame.cpp  hw.cpp  io.cpp  maolan.cxx  maolancli.cxx  midichunk.cpp  midiclip.cpp  midifile.cpp  midiio.cpp  oss.cpp  ossconfig.cpp  ossconfig.cxx  ossin.cpp  ossout.cpp  tempo.cpp  (+3 more)
src/alsa/audio/: base.cpp  in.cpp  out.cpp
src/audio/: buffer.cpp  chunk.cpp  clip.cpp  connectable.cpp  connection.cpp  file.cpp  fileinput.cpp  hw.cpp  input.cpp  io.cpp  oss.cpp  ossconfig.cpp  ossin.cpp  ossout.cpp  output.cpp  plugin.cpp  pluginport.cpp  track.cpp
src/audio/alsa/: base.cpp  config.cpp  in.cpp  out.cpp
src/audio/oss/: base.cpp  config.cpp  in.cpp  out.cpp
src/midi/: buffer.cpp  chunk.cpp  clip.cpp  connectable.cpp  connection.cpp  file.cpp  hw.cpp  input.cpp  io.cpp  track.cpp
src/midi/oss/: base.cpp  config.cpp  in.cpp  out.cpp
src/oss/: io.cpp
src/oss/audio/: base.cpp  in.cpp  out.cpp
src/oss/midi/: base.cpp  config.cpp  in.cpp  out.cpp
src/plugin/: instrument.cpp  io.cpp
src/plugin/lv2/: plugin.cpp  port.cpp  sequence.cpp
src/scheduler/: base.cpp  kqueue.cpp  poll.cpp
src/sndio/audio/: base.cpp  in.cpp  out.cpp
tests/: playback.cpp
tests/alsa/: capture.cpp  cli.cpp  p.cpp  params.cpp  playback.cpp
tests/engine/: load-save.cpp
tests/lv2/: cli.cpp
tests/oss/: cli.cpp  midi.cpp
tests/sndio/: params.cpp
